--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
   "author": "@Cuachi",
   "license": "MIT",
   "dependencies": {
+    "async": "^2.6.0",
     "body-parser": "^1.18.1",
     "cookie-parser": "^1.4.3",
     "ejs": "^2.5.7",
